--- a/contact/contact me.html
+++ b/contact/contact me.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Me</title>
-    <link rel="stylesheet" href="/contact/contactCSS.css">
-    <link rel="stylesheet" href="/globalCSS.css">
+    <link rel="stylesheet" type="text/css" href="/contact/contactCSS.css">
+    <link rel="stylesheet" type="text/css" href="/home/style.css">
     <link href="https://fonts.cdnfonts.com/css/aux-dotbitc" rel="stylesheet">
 </head>
 <body>
     <div id="navbar">
-        <a href="/home.html" id="logo">*insert companyLogo here*</a>
+        <a href="/home/home.html" id="logo">*insert companyLogo here*</a>
         <div id="navbar-right">
-          <a href="/home.html">Home</a>
+          <a href="/home/home.html">Home</a>
           <a href="/about/about.html">About</a>
           <a class="active" href="/contact/contact me.html">Contact Me</a>
         </div>
@@ -44,9 +44,8 @@
       <div class="paragraph">
         <h1>Thank You for Visiting!</h1>
           <p>I appreciate your time and interest in our website. If you have any questions or feedback, please feel free to contact me.</p>
-          <p>Have a wonderful day!
-          <img src="/media/goodjob-thumbsup.gif" alt="Might Guy">
-        </p>
+          <p>Have a wonderful day!</p>
+          <img src="/media/goodjob-thumbsup.gif" alt="Might Guy" style="align-items: center;">
       </div>
     </div>
     <div class="blok"></div><br>
