--- a/about/about.html
+++ b/about/about.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>about</title>
-    <link rel="stylesheet" href="/about/aboutCSS.css">
-    <link rel="stylesheet" href="/globalCSS.css">
+    <link rel="stylesheet" type="text/css" href="/about/aboutCSS.css">
+    <link rel="stylesheet" type="text/css" href="/home/style.css">
     <link href="https://fonts.cdnfonts.com/css/aux-dotbitc" rel="stylesheet">
 </head>
 <body>
   <div id="navbar">
-    <a href="/home.html" id="logo">*insert companyLogo here*</a>
+    <a href="/home/home.html" id="logo">*insert companyLogo here*</a>
     <div id="navbar-right">
-      <a href="/home.html">Home</a>
+      <a href="/home/home.html">Home</a>
       <a class="active" href="/about/about.html">About</a>
       <a href="/contact/contact me.html">Contact Me</a>
     </div>
