--- a/index.html
+++ b/index.html
@@ -4,17 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>index</title>
-    <link rel="stylesheet" href="/index.css">
+    <link rel="stylesheet" type="text/css" href="/index.css">
     <link href="https://fonts.cdnfonts.com/css/aux-dotbitc" rel="stylesheet">
 </head>
 <body>
     <nav>
         <div class="heading">Landing Page</div>
-        <span class="sideMenuButton"
-            onclick="openNavbar()">
-            ☰
-        </span>
- 
         <div class="navbar">
         </div>
     </nav>
@@ -25,108 +20,14 @@
             <h1>I am Alex Almacin</h1>
             <p>and I am a software developer and tech enthusiast.</p>
             <button>
-                <a href="/home.html">Explore More</a>
+                <a href="/home/home.html">Explore More</a>
             </button>
         </div>
         <div class="side2">
             <img src="/media/1671211296596-transformed.jpeg"width="500">
         </div>
     </div>
-    <!--<section class="about" id="My Projects">
-        <div class="content">
-            <div class="title">
-                <span>My Skills:</span>
-            </div>
-            <div class="boxes">
-                <div class="box">
-                    <div class="topic">
-                        <a href="" target="_blank">
-                            HTML
-                        </a>
-                    </div>
-                    <p>
-                        HyperText Markup Language or HTML is the standard markup language for documents designed to be displayed in a web browser.
-                        It defines the content and structure of web content. 
-                        It is often assisted by technologies such as Cascading Style Sheets (CSS) and scripting languages such as JavaScript.
-                    </p>
-                </div>
-                <div class="box">
-                    <div class="topic">
-                        <a href="" target="_blank">
-                            CSS
-                        </a>
-                    </div>
-                    <p>
-                        Cascading Style Sheets (CSS) is a style sheet language used for specifying the presentation and styling of a document written in a markup language such as HTML or XML (including XML dialects such as SVG, MathML or XHTML).
-                        CSS is a cornerstone technology of the World Wide Web, alongside HTML and JavaScript.
-                    </p>
-                </div>
-                <div class="box">
-                    <div class="topic">
-                        <a href="" target="_blank">
-                            Javascript
-                        </a>
-                    </div>
-                    <p>
-                        JavaScript, often abbreviated as JS, is a programming language and core technology of the World Wide Web, alongside HTML and CSS. 
-                        As of 2024, 98.8% of websites use JavaScript on the client side for webpage behavior, often incorporating third-party libraries.
-                        All major web browsers have a dedicated JavaScript engine to execute the code on users' devices.
-                    </p>
-                </div>
-            </div>
-        </div>
-    </section> -->
     <div class="blok"></div><br>
-    <!--<section class="contact" id="contact">
-        <div class="content">
-            <div class="title"><span>Sign Up</span></div>
-            <div class="contactMenu">
-                <div class="input1">
-                    <div class="label1">Your Name</div>
-                    <div class="input2">
-                        <input type="text"
-                            placeholder="Enter your Name here">
-                    </div>
-                    <div class="label1">
-                        <label>Your Email</label>
-                    </div>
-                    <div class="input2">
-                        <input type="text"
-                            placeholder="Enter your Email here">
-                    </div>
-                    <div class="label1">
-                        <label>Your Password</label>
-                    </div>
-                    <div class="input2">
-                        <input type="text"
-                            placeholder="Enter your Password here">
-                    </div>
-                    <div class="button">
-                        <button>Sign Up</button>
-                    </div>
-                </div>
-                <div class="input3">
-                    <div class="rightside1">
-                        <div class="title1">
-                            <span>
-                                Contact Me
-                            </span>
-                        </div>
-                        <div class="content1">
-                            97 Durham Road, Salt River, Cape Town
-                        </div>
-                        <div class="title1">
-                            <span>More Information</span>
-                        </div>
-                        <div class="content1">
-                            Greetings to all lovers of gaming, music and entertainment! I hope you enjoy browsing my website.
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section> -->
-    <!-- Footer section -->
     <footer>
         <div class="footer">
             <span>
