--- a/contact/contact me.html
+++ b/contact/contact me.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div id="navbar">
-        <a href="/home/home.html" id="logo">*insert companyLogo here*</a>
+        <a href="/index.html" id="logo">*insert companyLogo here*</a>
         <div id="navbar-right">
           <a href="/home/home.html">Home</a>
           <a href="/about/about.html">About</a>
