--- a/home/home.html
+++ b/home/home.html
@@ -29,7 +29,7 @@
             <a href="https://twitter.com/honestdeceit_" target="_blank"><i class="fa fa-twitter"></i></a>
             <a href="https://za.linkedin.com/in/alex-almacin-5225b6275" target="_blank"><i class="fa fa-linkedin"></i></a>
             <a href="https://www.instagram.com/alex_almacin/" target="_blank"><i class="fa fa-instagram"></i></a>
-            <p><button><a href="./public/contact/contact.html">Contact Me</a></button></p>
+            <p><button><a href="/contact/contact me.html">Contact Me</a></button></p>
         </div>  
         <script src="/scroll.js"></script>
     <div class="blok"></div><br>
