fixed some code

--- a/about/about.html
+++ b/about/about.html
@@ -14,6 +14,7 @@
     <div id="navbar-right">
       <a href="/home/home.html">Home</a>
       <a class="active" href="/about/about.html">About</a>
+      <a href="/projects/projects.html">Projects</a>
       <a href="/contact/contact me.html">Contact Me</a>
     </div>
   </div>
@@ -84,7 +85,7 @@
   <script src="/scroll.js"></script>
   <div class="blok"></div><br>
   <footer style="text-align: center; color: white;">
-      <small>&copy; 2024 Honest_Deceit</small>
+      <small>&copy; 2024 Alex Almacin</small>
   </footer>
 </body>
 </html>
