--- a/contact/contact me.html
+++ b/contact/contact me.html
@@ -14,6 +14,7 @@
         <div id="navbar-right">
           <a href="/home/home.html">Home</a>
           <a href="/about/about.html">About</a>
+          <a href="/projects/projects.html">Projects</a>
           <a class="active" href="/contact/contact me.html">Contact Me</a>
         </div>
       </div>
@@ -50,7 +51,7 @@
     </div>
     <div class="blok"></div><br>
     <footer style="text-align: center; color: white;">
-        <small>&copy; 2024 Honest_Deceit</small>
+        <small>&copy; 2024 Alex Almacin</small>
     </footer>
 </body>
 </html>
