--- a/home/home.html
+++ b/home/home.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>homePage</title>
     <link rel="stylesheet" type="text/css" href="/home/style.css">
-    <link rel="stylesheet" type="text/css" href="/index.css">
     <link href="https://fonts.cdnfonts.com/css/aux-dotbitc" rel="stylesheet">
 </head>
 <body>
@@ -14,6 +13,7 @@
     <div id="navbar-right">
       <a class="active" href="/home/home.html">Home</a>
       <a href="/about/about.html">About</a>
+      <a href="/projects/projects.html">Projects</a>
       <a href="/contact/contact me.html">Contact Me</a>
     </div>
   </div>
@@ -34,8 +34,7 @@
         <script src="/scroll.js"></script>
     <div class="blok"></div><br>
     <footer style="text-align: center; color: white;">
-        <small>&copy; 2024 Honest_Deceit</small>
+        <small>&copy; 2024 Alex Almacin</small>
     </footer>
-  
 </body>
 </html>
