--- a/projects/projects.html
+++ b/projects/projects.html
@@ -4,18 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projects</title>
-    <link rel="stylesheet" href="/Portfolio/public/projects/projekt.css">
-    <link rel="stylesheet" href="../../globalStyles.css">
+    <link rel="stylesheet" href="/projects/projekt.css">
+    <link rel="stylesheet" href="/home/style.css">
     <link href="https://fonts.cdnfonts.com/css/aux-dotbitc" rel="stylesheet">
 </head>
 <body>
-    <div class="topnav">
-        <a href="../../index.html">Home</a>
-        <a href="../about/about.html">About</a>
-        <a class="active" href="projects.html">Projects</a>
-        <a href="../contact/contact.html">Contact Me</a>
-    </div>
+    <div id="navbar">
+        <a href="/index.html" id="logo">*insert companyLogo here*</a>
+        <div id="navbar-right">
+          <a href="/home/home.html">Home</a>
+          <a href="/about/about.html">About</a>
+          <a class="active" href="/projects/projects.html">Projects</a>
+          <a href="/contact/contact me.html">Contact Me</a>
+        </div>
+      </div>
     <div class="blok"></div> <br>
+    <br>
     <h1 style="color: white; text-align:center;">My Projects:</h1>
     <center>
         <!-- The video -->
@@ -35,7 +39,7 @@
     <p style="text-align: center; color: whitesmoke;">Here I played Mamela by Mi Case with my band on the 9th of December 2023</p>
     <div class="blok"></div><br>
     <footer style="text-align: center; color: white;">
-        <small>&copy; 2024 Honest_Deceit</small>
+        <small>&copy; 2024 Alex Almacin</small>
     </footer>
 </body>
 </html>
